# CleanDir

./: .gitignore  CleanDir-v1.3.0-macOS-aarch64.dmg.sha256  CleanDir-v1.3.0-macOS-x86_64.dmg.sha256  CleanDir-v1.4.0-macOS-aarch64.dmg.sha256  CleanDir-v1.4.0-macOS-x86_64.dmg.sha256  PLATFORMS.md  README.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  build-universal.sh  index.html  package.json  tailwind.config.js  vite.config.js
src/: App-Bubble.jsx  App-List.jsx  App.jsx  DeleteConfirmModal.jsx  PermissionGuide.jsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: create_icons.sh  icon.icns
src-tauri/src/: main.rs
